<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Trip Diary</string>
	<string name="action_settings">Settings</string>
	<string name="about">About</string>
	<string name="title">Title</string>
	<string name="content">Content</string>
	<string name="date">Date</string>
	<string name="price">Price</string>
	<string name="currency">Currency</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="confirm">Confirm</string>
	<string name="cancel">Cancel</string>
	<string name="version">Version </string>
	<string name="update">Update</string>
	<string name="backup">Backup</string>
	<string name="restore">Restore</string>
	<string name="total">Total</string>
	<string name="cash">Cash</string>
	<string name="card">Card</string>
	<string name="history_map">History Map</string>
	<string name="open_source_license"><u>OpenSource License</u></string>

	<string name="title_new_spend">new Spend</string>
	<string name="title_modify_spend">modify Spend</string>
	<string name="title_delete_spend">delete Spend</string>
	<string name="message_delete_spend">Are you sure you want to delete your spend?</string>
	<string name="title_delete_photo">delete Photo</string>
	<string name="message_delete_photo">Are you sure you want to delete your photo?</string>

	<string name="toast_empty_title_or_price">You must input a title and price :(</string>
	<string name="toast_max_photos">You can add up to 5 photos</string>
	<string name="toast_photo_upload_failed">Upload is failed</string>
	<string name="photo">Photo</string>
	<string name="title_photo_upload">Photo Upload</string>
	<string name="text_photo_upload">Upload in progress</string>
	<string name="text_photo_upload_complete">Upload complete</string>
	<string name="email">Email address</string>
	<string name="toast_empty_email">Email address is empty :(</string>
	<string name="toast_backup_complete">Backup complete :)</string>
	<string name="toast_backup_failed">Backup failed :(</string>

	<string name="krw" translatable="false">KRW</string>
	<string name="usd" translatable="false">USD</string>
	<string name="jpy" translatable="false">JPY</string>
	<string name="eur" translatable="false">EUR</string>
	<string name="gbp" translatable="false">GBP</string>
	<string name="twd" translatable="false">TWD</string>
</resources>
