<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical"
		android:paddingStart="16dp"
		android:paddingTop="16dp"
		android:paddingEnd="16dp">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/tilTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/etTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/title"
				android:inputType="text"
				android:maxLength="20"
				android:maxLines="1"
				android:textColor="@color/textColorPrimary"
				android:textSize="18sp" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/tilContent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/etContent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/content"
				android:inputType="textMultiLine"
				android:textColor="@color/textColorPrimary"
				android:textSize="14sp" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/tilDate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/etDate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusableInTouchMode="false"
				android:hint="@string/date"
				android:inputType="date"
				android:textColor="@color/textColorPrimary"
				android:textSize="14sp" />
		</com.google.android.material.textfield.TextInputLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/tilPrice"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1">

				<EditText
					android:id="@+id/etPrice"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/price"
					android:inputType="numberDecimal"
					android:maxLength="9"
					android:textColor="@color/textColorPrimary"
					android:textSize="14sp" />
			</com.google.android.material.textfield.TextInputLayout>

			<Spinner
				android:id="@+id/spnCurrency"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|end"
				android:gravity="center_vertical|end" />
		</LinearLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvPhotos"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp" />

		<com.google.android.gms.maps.MapView
			android:id="@+id/mvLocation"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnDelete"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/delete"
			android:visibility="gone" />

		<View
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1" />

		<Button
			android:id="@+id/btnCancel"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />

		<Button
			android:id="@+id/btnSave"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/save" />
	</LinearLayout>
</LinearLayout>