<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="16dp"
	tools:context=".AboutActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:contentDescription="@string/app_name"
			android:src="@mipmap/ic_launcher"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:gravity="center"
			android:text="@string/app_name"
			android:textColor="@color/textColorPrimary"
			android:textSize="24sp"/>

		<TextView
			android:id="@+id/tvVersion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textColor="@color/textColorSecondary"
			android:textSize="16sp"/>

		<Button
			android:id="@+id/btnUpdate"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/update"
			android:textSize="16sp"
			android:visibility="gone"/>
	</LinearLayout>

	<TextView
		android:id="@+id/tvLicense"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/open_source_license"
		android:textColor="@color/textColorPrimary"
		android:textSize="16sp"/>
</LinearLayout>